# MerkurDB

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  README_CN.md  REVIEW_V4.md  SECURITY.md  config.example.yaml  openapi.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/consolidators/: Cargo.toml
crates/consolidators/src/: lib.rs  llm.rs  noop.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  traits.rs  types.rs
crates/embedders/: Cargo.toml
crates/embedders/src/: lib.rs  noop.rs  ollama.rs  openai.rs
crates/forgetters/: Cargo.toml
crates/forgetters/src/: ebbinghaus.rs  lib.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: main.rs
crates/server/: Cargo.toml
crates/server/src/: app_state.rs  auth.rs  config.rs  error.rs  main.rs  metrics.rs  rate_limit.rs  router.rs  scheduler.rs  tests.rs
crates/server/src/handlers/: admin.rs  memory.rs  mod.rs  search.rs  status.rs  trigger.rs  write.rs
crates/storage/: Cargo.toml
crates/storage/benches/: vector_bench.rs
crates/storage/src/: lancedb.rs  lib.rs  migration.rs  sqlite.rs  sqlite_helpers.rs  vector_index.rs
crates/storage/tests/: storage_tests.rs
docs/: ARCHITECTURE.md  ARCHITECTURE_CN.md  SPEC.md  SPEC_CN.md
