[workspace]
members = [
    "crates/core",
    "crates/storage",
    "crates/embedders",
    "crates/consolidators",
    "crates/forgetters",
    "crates/server",
    "crates/client",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["TtTRz <romc1224@gmail.com>"]
repository = "https://github.com/TtTRz/MerkurDB"
readme = "README.md"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
