[package]
name = "merkur-consolidators"
description = "Memory consolidation plugins (Noop, LLM) for MerkurDB"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
merkur-core = { path = "../core" }
async-trait.workspace = true
reqwest = { version = "0.12", features = ["json"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
chrono.workspace = true
tokio = { workspace = true, features = ["test-util"] }
