[package]
name = "merkur-mcp"
description = "MCP (Model Context Protocol) server for MerkurDB"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "merkur-mcp"
path = "src/main.rs"

[dependencies]
merkur-core = { path = "../core" }
merkur-storage = { path = "../storage" }
merkur-embedders = { path = "../embedders" }
rmcp = { version = "1.6", features = ["server", "transport-io", "macros"] }
schemars = "1"
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow = "1"
