[package]
name = "merkur-server"
description = "HTTP server and scheduler for MerkurDB - a cognitive memory service"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "merkur-server"
path = "src/main.rs"
[features]
default = ["ollama"]
ollama = ["merkur-embedders/ollama"]
openai = ["merkur-embedders/openai"]
lancedb = ["merkur-storage/lancedb"]
[dependencies]
merkur-core = { path = "../core" }
merkur-storage = { path = "../storage" }
merkur-embedders = { path = "../embedders" }
merkur-consolidators = { path = "../consolidators" }
merkur-forgetters = { path = "../forgetters" }
axum = "0.8"
figment = { version = "0.10", features = ["yaml", "env"] }
tower-http = { version = "0.6", features = ["cors"] }
serde.workspace = true
serde_json.workspace = true
# Binary crate: needs rt-multi-thread, net, signal on top of the workspace
# lean defaults.
tokio = { version = "1", features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
anyhow = "1"
subtle = "2"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }
governor = "0.8"
tower = "0.5"
[dev-dependencies]
tower = "0.5"
tokio = { workspace = true, features = ["test-util"] }
